assets/css/index.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: black;
  font-family: "VT323", monospace;
  color: antiquewhite;
}

p {
  color: antiquewhite;
}

.initial-window-container {
  width: 100vw;
  height: 100%;
  background-color: black;
  position: absolute;
  z-index: 100;
}

.match-messages {
  height: 5rem;
  width: 100vw;
  /* background-color: indianred; */
  position: absolute;
  top: 50%;
  text-align: center;
}

.match-messages img {
  height: 3rem;
}

.game-table {
  background-image: url("../items/green-table.jpg");
  background-position: center;
  /* background-color: steelblue; */
  height: calc(var(--vh, 1vh) * 100);
  /* height: 100%; */
  margin: 0 auto;
  max-width: 50rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.game-section {
  /* background-color: tomato; */
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.initial-window {
  /* background-color: tomato; */
  /* background-image: url("../items/blackjack_title.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover; */
  height: 100%;
  margin: 0 auto;
  max-width: 50rem;
}

.initial-elements {
  background-image: url("../items/blackjack_title.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  height: 100%;
  margin: 0 auto;
  max-width: 50rem;
}

footer {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-bottom: 0.2rem;
}

.bet-section-window {
  /* background-color: tomato; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  left: 0;
  margin-left: auto;
  margin-right: auto;
  max-width: 50rem;
  height: 100%;
  position: absolute;
  right: 0;
  top: 0;
  text-align: center;
  align-items: center;
}

.bet-section-window img {
  width: 20rem;
}

.bet-section {
  align-items: center;
  /* background-color: brown; */
  display: flex;
  flex-direction: column;
  height: 62%;
  justify-content: space-around;
}

.match-buttons {
  display: flex;
}

.match-buttons div {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

p {
  margin-bottom: 0;
}

.row {
  margin: 0;
}

.navbar {
  padding: 1rem;
  z-index: 1;
}

.outside-navbar {
  background-color: rgba(0, 0, 0, 0.6);
  position: absolute;
  width: 100%;
  height: 4rem;
  z-index: 1;
}

.one-card {
  height: 5.625rem;
  margin-left: -3.125rem;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  width: auto;
  top: 23rem;
  left: 50%;
  position: relative;
}

.one-card-dealer {
  height: 5.625rem;
  margin-left: -3.125rem;
  /*   margin-top: 0.5rem;
  margin-bottom: 0.5rem; */
  width: auto;
  position: relative;
  top: 12.3rem;
  left: 50%;

  /*   top: 200px;
  position: relative; */
}

.second-card-dealer {
  animation-name: second-card-dealer;
  animation-duration: 1s;
  animation-fill-mode: forwards;
}

@keyframes second-card-dealer {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.dealing-player-card {
  animation-name: dealingcard;
  animation-duration: 1s;
  animation-fill-mode: forwards;
  position: relative;
}

@keyframes dealingcard {
  0% {
    transform: rotate(45deg);
    top: 0;
    left: 0;
  }
  100% {
    transform: rotate(0deg);
    top: 23rem;
    left: 50%;
  }
}

.dealing-dealer-card {
  animation-name: dealing_dealer_card;
  animation-duration: 1s;
  animation-fill-mode: forwards;
  position: relative;
}

@keyframes dealing_dealer_card {
  0% {
    transform: rotate(45deg);
    top: 0;
    left: 0;
  }
  100% {
    transform: rotate(0deg);
    top: 12.3rem;
    left: 50%;
  }
}

.player-section {
  /* background-color: tomato; */
  height: 60%;
  max-width: 50rem;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  /* bottom: 0; */
  margin: auto;
}

.dealer-section {
  /* text-align: center; */
  /* background-color: tomato; */
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  max-width: 50rem;
  height: 60%;
  margin: auto;
}

/* .dealer-points {
} */

.player-points {
  width: 2rem;
  height: 2rem;
  top: 15.5rem;
  left: 60%;
  position: relative;
  background-color: palevioletred;
  padding: -0.5rem;
  /* text-align: center; */
  border-radius: 50%;
  align-items: center;
  justify-content: center;
  display: flex;
  align-items: center;
}
.dealer-points {
  /* margin-left: -3.125rem; */
  width: 2rem;
  height: 2rem;
  top: 12.5rem;
  left: 60%;
  position: relative;
  background-color: palevioletred;
  /* padding: -0.5rem; */
  /* text-align: center; */
  border-radius: 50%;
  align-items: center;
  justify-content: center;
  display: flex;
  align-items: center;
  z-index: 3;
}

.money-amount {
  display: flex;
  font-size: 1.5rem;
}

.money-ico,
.chips-ico {
  height: 2.2rem;
  margin-right: 0.5rem;
}

.drink-ico {
  height: 5rem;
}

.chip img {
  height: 3rem;
  width: auto;
}

.bet-button {
  visibility: hidden;
}

.bet-button img {
  height: 2.5rem;
}

.bet {
  display: flex;
  flex-direction: column;
  /* background-color: brown; */
  max-width: 10rem;
  /* height: 10rem; */
  margin-top: 3rem;
  margin-right: 0.4rem;
}

.bet img {
  height: 1.8rem;
  width: 1.8rem;
}

.bet-value {
  display: flex;
  justify-content: center;
  margin-bottom: 3rem;
}

.bet-value-items {
  display: flex;
}

.new-chip {
  margin-top: -35px;
}

.user-money {
  display: flex;
}

.game-logo {
  max-width: 20rem;
  /* background-color: brown; */
}

.press-start {
  /* background-color: chocolate; */
  height: 8rem;
}

.press-start-text {
  animation: blink 1.7s linear infinite;
}

@keyframes blink {
  50% {
    opacity: 0;
  }
}

.welcome-container,
.start-game-container {
  background-image: url("../items/hall.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  /* background-color: chocolate; */
  height: 100%;
  margin: 0 auto;
  max-width: 50rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  justify-content: center;
}

.playerName {
  background-color: transparent;
  /* background-color: tomato; */
  border-top: 0;
  border-left: 0;
  border-right: 0;
  border-color: antiquewhite;
  border-width: 0.25rem;
  max-width: 87%;
  font-size: calc(1.375rem + 1.5vw);
  color: antiquewhite;
}

.playerName:focus {
  outline: none;
}

.welcome-elements {
  /* background-color: seagreen; */
  height: 25rem;
  display: flex;
  flex-direction: column;
  /* justify-content: space-between; */
  /* text-align: center; */
  align-items: center;
  max-width: 32rem;
}

.continue-button,
.startgame-button {
  background-color: transparent;
  border: none;
  color: antiquewhite;
}

.startgame-button {
  animation: blink 1.7s linear infinite;
}

.continue-button:disabled {
  color: rgba(250, 235, 215, 0.5);
}

